<resources>
    <!--Judul App -->
    <string name="app_name">Pencatatan Keuangan Personal</string>
    <string name="home_title">Personal Budgeting</string>

    <!-- Button -->
    <string name="button_simpan">SIMPAN</string>

    <!--Pemasukan -->
    <string name="pemasukan_label_nama">Nama Pemasukan</string>
    <string name="pemasukan_label_jumlah">Jumlah Pemasukan</string>
    <string name="pemasukan_label_tanggal">Tanggal Pemasukan</string>
    <string name="pemasukan_label_kategori">Katagori Pemasukan</string>

    <!--Pengeluaran -->
    <string name="pengeluaran_label_nama">Nama Pengeluaran</string>
    <string name="pengeluaran_label_jumlah">Jumlah Pengeluaran</string>
    <string name="pengeluaran_label_tanggal">Tanggal Pengeluaran</string>
    <string name="pengeluaran_label_katagori">Katagori Pengeluaran</string>

    <!--Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Pemasukan Item -->
    <string-array name="katagori_pemasukan">
        <item>Gaji</item>
        <item>Piutang</item>
        <item>Uang Jajan</item>
        <item>Insentif</item>
        <item>Investasi</item>
        <item>Saham</item>
        <item>Lainnya</item>
    </string-array>

    <!-- Pengeluaran Item -->
    <string-array name="katagori_pengeluaran">
        <item>Listrik</item>
        <item>Air</item>
        <item>Hutang</item>
        <item>Hobi</item>
        <item>Traveling</item>
        <item>Kuliner</item>
        <item>Lainnya</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pengaturan">Pengaturan</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
